--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "mn133:5.11": "Denn es gibt kein Feilschen ",
   "mn133:5.12": "mit dem Tod und seinem mächtigen Heer. ",
   "mn133:5.13": "Der friedvolle Abgeklärte erklärte es: ",
-  "mn133:5.14": "Die so voll Eifer meditieren, "
+  "mn133:5.14": "Die so voll Eifer meditieren, ",
+  "mn133:5.15": "unermüdlich bei Tag und Nacht, "
 }
