--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -43,5 +43,6 @@
   "mn133:5.16": "sie haben wahrhaftig diese eine erlesene Nacht.“ ",
   "mn133:6.1": "Das sagte der Buddha. ",
   "mn133:6.2": "Nachdem er geendet hatte, erhob sich der Heilige von seinem Sitz und ging zu seiner Hütte. ",
-  "mn133:7.1": "Kurz nachdem der Buddha gegangen war, überlegten diese Mönche und Nonnen: "
+  "mn133:7.1": "Kurz nachdem der Buddha gegangen war, überlegten diese Mönche und Nonnen: ",
+  "mn133:7.2": "„Der Buddha hat diesen kurzen Merksatz zum Aufsagen vorgestellt und ist dann zu seiner Hütte gegangen, ohne die Bedeutung ausführlich zu erklären. … "
 }
