--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -49,5 +49,6 @@
   "mn133:7.20": "Da dachten diese Mönche und Nonnen: ",
   "mn133:7.21": "„Dieser Ehrwürdige Mahākaccāna wird vom Buddha gepriesen und von seinen vernünftigen geistlichen Gefährten geschätzt. ",
   "mn133:7.22": "Er kann die Bedeutung dieses kurzen Merksatzes zum Aufsagen, der vom Buddha vorgestellt wurde, ausführlich erklären. ",
-  "mn133:7.23": "Wir wollen zu ihm gehen und ihn zu der Sache befragen.“ "
+  "mn133:7.23": "Wir wollen zu ihm gehen und ihn zu der Sache befragen.“ ",
+  "mn133:7.24": "Da gingen diese Mönche und Nonnen zu Mahākaccāna und tauschten Willkommensgrüße mit ihm aus. "
 }
