--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -51,5 +51,6 @@
   "mn133:7.22": "Er kann die Bedeutung dieses kurzen Merksatzes zum Aufsagen, der vom Buddha vorgestellt wurde, ausführlich erklären. ",
   "mn133:7.23": "Wir wollen zu ihm gehen und ihn zu der Sache befragen.“ ",
   "mn133:7.24": "Da gingen diese Mönche und Nonnen zu Mahākaccāna und tauschten Willkommensgrüße mit ihm aus. ",
-  "mn133:7.25": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzten sie sich zur Seite hin. Sie berichteten ihm die Begebenheit und sagten: "
+  "mn133:7.25": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzten sie sich zur Seite hin. Sie berichteten ihm die Begebenheit und sagten: ",
+  "mn133:8.6": "„Dass der Ehrwürdige Mahākaccāna das bitte erkläre.“ "
 }
