--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -53,5 +53,6 @@
   "mn133:7.24": "Da gingen diese Mönche und Nonnen zu Mahākaccāna und tauschten Willkommensgrüße mit ihm aus. ",
   "mn133:7.25": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzten sie sich zur Seite hin. Sie berichteten ihm die Begebenheit und sagten: ",
   "mn133:8.6": "„Dass der Ehrwürdige Mahākaccāna das bitte erkläre.“ ",
-  "mn133:9.1": "„Geehrte, wie ein Mensch, der Kernholz bräuchte und auf seiner Suche nach Kernholz zu einem großen Baum käme, der mit Kernholz dastünde. Doch er würde die Wurzel und den Stamm übergehen und dächte, das Kernholz wäre in den Zweigen und Blättern zu suchen. "
+  "mn133:9.1": "„Geehrte, wie ein Mensch, der Kernholz bräuchte und auf seiner Suche nach Kernholz zu einem großen Baum käme, der mit Kernholz dastünde. Doch er würde die Wurzel und den Stamm übergehen und dächte, das Kernholz wäre in den Zweigen und Blättern zu suchen. ",
+  "mn133:9.2": "So geht es den Ehrwürdigen. Obwohl ihr dem Buddha Auge in Auge gegenübersaßt, habt ihr ihn übergangen und gedacht, ihr solltet mich zu der Sache befragen. "
 }
