--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -54,5 +54,6 @@
   "mn133:7.25": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzten sie sich zur Seite hin. Sie berichteten ihm die Begebenheit und sagten: ",
   "mn133:8.6": "„Dass der Ehrwürdige Mahākaccāna das bitte erkläre.“ ",
   "mn133:9.1": "„Geehrte, wie ein Mensch, der Kernholz bräuchte und auf seiner Suche nach Kernholz zu einem großen Baum käme, der mit Kernholz dastünde. Doch er würde die Wurzel und den Stamm übergehen und dächte, das Kernholz wäre in den Zweigen und Blättern zu suchen. ",
-  "mn133:9.2": "So geht es den Ehrwürdigen. Obwohl ihr dem Buddha Auge in Auge gegenübersaßt, habt ihr ihn übergangen und gedacht, ihr solltet mich zu der Sache befragen. "
+  "mn133:9.2": "So geht es den Ehrwürdigen. Obwohl ihr dem Buddha Auge in Auge gegenübersaßt, habt ihr ihn übergangen und gedacht, ihr solltet mich zu der Sache befragen. ",
+  "mn133:9.3": "Denn er ist der Buddha, der erkennt und sieht. Er ist das Sehen, er ist das Erkennen, er ist die Manifestation des Grundsatzes, er ist die Manifestation der Göttlichkeit. Er ist der Lehrer, der Verkünder, der Erheller der Bedeutung, der Gewährer der Unsterblichkeit, der Herr der Wahrheit, der Klargewordene. "
 }
