--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -58,5 +58,6 @@
   "mn133:9.3": "Denn er ist der Buddha, der erkennt und sieht. Er ist das Sehen, er ist das Erkennen, er ist die Manifestation des Grundsatzes, er ist die Manifestation der Göttlichkeit. Er ist der Lehrer, der Verkünder, der Erheller der Bedeutung, der Gewährer der Unsterblichkeit, der Herr der Wahrheit, der Klargewordene. ",
   "mn133:9.4": "Das wäre die Zeit gewesen, euch zum Buddha zu begeben und ihn zu der Sache zu befragen. So wie er es erklärt hätte, hättet ihr es behalten sollen.“ ",
   "mn133:10.1": "„Sicherlich ist er der Buddha, der erkennt und sieht. Sicherlich ist er das Sehen, ist er die Manifestation des Grundsatzes, ist er die Manifestation der Göttlichkeit. Sicherlich ist er der Lehrer, der Verkünder, der Erheller der Bedeutung, der Gewährer der Unsterblichkeit, der Herr der Wahrheit, der Klargewordene. ",
-  "mn133:10.2": "Das wäre die Zeit gewesen, uns zum Buddha zu begeben und ihn zu der Sache zu befragen. "
+  "mn133:10.2": "Das wäre die Zeit gewesen, uns zum Buddha zu begeben und ihn zu der Sache zu befragen. ",
+  "mn133:10.3": "So wie er es erklärt hätte, hätten wir es behalten sollen. "
 }
