--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -59,5 +59,6 @@
   "mn133:9.4": "Das wäre die Zeit gewesen, euch zum Buddha zu begeben und ihn zu der Sache zu befragen. So wie er es erklärt hätte, hättet ihr es behalten sollen.“ ",
   "mn133:10.1": "„Sicherlich ist er der Buddha, der erkennt und sieht. Sicherlich ist er das Sehen, ist er die Manifestation des Grundsatzes, ist er die Manifestation der Göttlichkeit. Sicherlich ist er der Lehrer, der Verkünder, der Erheller der Bedeutung, der Gewährer der Unsterblichkeit, der Herr der Wahrheit, der Klargewordene. ",
   "mn133:10.2": "Das wäre die Zeit gewesen, uns zum Buddha zu begeben und ihn zu der Sache zu befragen. ",
-  "mn133:10.3": "So wie er es erklärt hätte, hätten wir es behalten sollen. "
+  "mn133:10.3": "So wie er es erklärt hätte, hätten wir es behalten sollen. ",
+  "mn133:10.4": "Dennoch wird der Ehrwürdige Mahākaccāna vom Buddha gepriesen und von seinen vernünftigen geistlichen Gefährten geschätzt. "
 }
