--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -61,5 +61,6 @@
   "mn133:10.2": "Das wäre die Zeit gewesen, uns zum Buddha zu begeben und ihn zu der Sache zu befragen. ",
   "mn133:10.3": "So wie er es erklärt hätte, hätten wir es behalten sollen. ",
   "mn133:10.4": "Dennoch wird der Ehrwürdige Mahākaccāna vom Buddha gepriesen und von seinen vernünftigen geistlichen Gefährten geschätzt. ",
-  "mn133:10.5": "Er kann die Bedeutung dieses kurzen Merksatzes zum Aufsagen, der vom Buddha vorgestellt wurde, ausführlich erklären. "
+  "mn133:10.5": "Er kann die Bedeutung dieses kurzen Merksatzes zum Aufsagen, der vom Buddha vorgestellt wurde, ausführlich erklären. ",
+  "mn133:10.6": "Bitte erkläre es, wenn es dir nichts ausmacht.“ "
 }
