--- a/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn133_translation-de-sabbamitta.json
@@ -64,5 +64,6 @@
   "mn133:10.5": "Er kann die Bedeutung dieses kurzen Merksatzes zum Aufsagen, der vom Buddha vorgestellt wurde, ausführlich erklären. ",
   "mn133:10.6": "Bitte erkläre es, wenn es dir nichts ausmacht.“ ",
   "mn133:11.1": "„Nun denn, Geehrte, hört zu und gebraucht den Geist gut, ich werde sprechen.“ ",
-  "mn133:11.2": "„Ja, Geehrter“, antworteten sie. "
+  "mn133:11.2": "„Ja, Geehrter“, antworteten sie. ",
+  "mn133:11.3": "Der Ehrwürdige Mahākaccāna sagte: "
 }
